<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/copy_wallet_address_action"
        style="@style/Aw.Typography.ActionItemText"
        android:text="@string/copy_wallet_address" />

    <View style="@style/Aw.Component.Separator" />

    <TextView
        android:id="@+id/show_my_wallet_address_action"
        style="@style/Aw.Typography.ActionItemText"
        android:text="@string/title_show_wallet_address" />

    <View style="@style/Aw.Component.Separator" />

    <TextView
        android:id="@+id/add_hide_tokens_action"
        style="@style/Aw.Typography.ActionItemText"
        android:text="@string/add_hide_tokens" />

    <View style="@style/Aw.Component.Separator" />

    <TextView
        android:id="@+id/rename_this_wallet_action"
        style="@style/Aw.Typography.ActionItemText"
        android:text="@string/rename_this_wallet_action" />
</LinearLayout>


