<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_send_multiple_tokens"
        android:title="@string/send_multiple_tokens"
        app:iconTint="?colorControlNormal"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_grid_view"
        android:icon="@drawable/ic_menu_grid"
        android:title="@string/switch_to_grid_view"
        app:iconTint="?colorControlNormal"
        app:showAsAction="collapseActionView" />

    <item
        android:id="@+id/action_list_view"
        android:icon="@drawable/ic_menu_list"
        android:title="@string/switch_to_list_view"
        app:iconTint="?colorControlNormal"
        app:showAsAction="collapseActionView" />
</menu>