<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:id="@+id/dapp_browser_menu">
        <item
            android:id="@+id/action_reload"
            android:icon="@drawable/ic_dapp_reload"
            android:orderInCategory="15"
            android:title="@string/action_reload"
            app:showAsAction="withText" />

        <item
            android:id="@+id/action_share"
            android:icon="@drawable/ic_dapp_share"
            android:orderInCategory="20"
            android:title="@string/action_share"
            app:showAsAction="withText" />

        <item
            android:id="@+id/action_scan"
            android:icon="@drawable/ic_camera"
            android:orderInCategory="25"
            android:title="@string/action_scan_dapp"
            app:showAsAction="withText" />
    </group>
</menu>