<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar1"
        layout="@layout/layout_app_bar" />

    <com.journeyapps.barcodescanner.DecoratedBarcodeView
        android:id="@+id/scanner_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar1"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|bottom"
        android:text=""
        android:textColor="#ffffff" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/scanner_view"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/full_large_margin"
        android:text="@string/message_scan_camera"
        android:textColor="@color/white"
        android:textSize="@dimen/sp17" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/half_large_margin"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/flash_button"
            style="@style/QRScannerTextView"
            app:drawableTopCompat="@drawable/ic_flash"
            android:text="@string/light" />

        <TextView
            android:id="@+id/my_address_button"
            style="@style/QRScannerTextView"
            app:drawableTopCompat="@drawable/ic_qr_rounded_white"
            android:text="@string/my_qr_code" />

        <TextView
            android:id="@+id/browse_button"
            style="@style/QRScannerTextView"
            app:drawableTopCompat="@drawable/ic_browse"
            android:text="@string/browse"
            android:visibility="visible"/>

    </LinearLayout>

</RelativeLayout>